src/main/deploy/kustomize/base/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zai-test-service
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      containers:
      - name: zai-test-service
        image: ZAI_TEST_SERVICE
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 30
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 0
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 1
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 256Mi
            cpu: 200m
        volumeMounts:
        - name: share
          mountPath: /share
      volumes:
      - name: share
        persistentVolumeClaim:
          claimName: zai-test-server-claim
      imagePullSecrets:
      - name: zailab.registry
